DOCS: used swagger-autogen
